<resources>
    <string name="app_name">Loyalty Card Wallet</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Parola</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Buna !"</string>
    <string name="invalid_username">Username invalid</string>
    <string name="login_failed">"Login esuat!"</string>


    <string name="search_hint">Numele magazinului</string>

    <string name="add">Adauga</string>
    <string name="add_scan">Aseaza cardul sub camera pentru a scana</string>
    <string name="add_or">SAU</string>
    <string name="add_manual">Introdu cardul manual</string>

    <string name="store_name">Magazin: %1$s</string>
    <string name="store_address">Adresa cel mai apropiat: %1$s</string>
    <string name="store_isOpen">Deschis acum: %1$s</string>

    <string name="isOpen">Da</string>
    <string name="isClosed">Nu</string>
    <string name="submit">Adauga</string>
    <string name="image_list_card_logo_contentDescription">Logo magazin</string>


    <string name="action_register">Inregistreazate</string>
    <string name="action_language">Limba</string>

    <string name="error_empty_barcode">Codul nu poate fi gol</string>
    <string name="error_empty_email">Emailul nu poate fi gol</string>
    <string name="error_empty_password">Parola nu poate fi goala</string>
    <string name="error_invalid_password">Parola trebuie sa aiba >5 caractere</string>

    <!-- ADD MENU -->
    <string name="add_menu_search">Cauta</string>
    <string name="add_menu_add_provider">Adauga magazin</string>

    <!--  ADD PROVIDER -->
    <string name="add_provider_hint">Nume magazin</string>

    <!--  Card menu  -->
    <string name="card_edit">Editeaza</string>
    <string name="card_delete">Sterge</string>
    <string name="card_options">Setari card</string>

    <string name="delete_card_provider">Sterge</string>

    <string name="distance_report_title">Lista celor mai apropiate magazine la care detii card.</string>
    <string name="numbers_report_title">Numar carduri pentru fiecare magazin.</string>


    <string name="menu_report_distance">Magazine apropiate</string>
    <string name="menu_report_numbers">Total carduri global</string>

    <string name="save">Salveaza</string>
    <string name="report_save_succes">Raport salvat cu succes</string>

</resources>

